--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Understanding DataOps"
+author: "Sagar Srivastava"
+description: "A playbook and series of blogs for Understanding DataOps, its components and best practices leveraging my personal experiences"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "ssravisrivastava@gmail.com"
 twitter_username: "twitteruser"
 github_username: "githubuser"
-linkedin_username: "linkedinuser"
+linkedin_username: "www.linkedin.com/in/sagar-srivastava-5a7ba2ba"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
