--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Understanding DataOps"
+title: "DataOps"
 author: "Sagar Srivastava"
 description: "A playbook and series of blogs for Understanding DataOps, its components and best practices leveraging my personal experiences"
 
