--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "DataOps"
+title: "Data Ops and AI: The Power Play"
 author: "Sagar Srivastava"
-description: "A playbook and series of blogs for Understanding DataOps, its components and best practices leveraging my personal experiences"
+description: "A playbook and series of blogs for Understanding DataOps and Data for AI, its components and best practices leveraging my personal experiences"
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
