--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,8 @@ description: "A playbook and series of blogs for Understanding DataOps and Data 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "ssravisrivastava@gmail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "www.linkedin.com/in/sagar-srivastava-5a7ba2ba"
+github_username: "SagarS19"
+linkedin_username: "sagar-srivastava-5a7ba2ba"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
